# Line_Ai_new

./: .env.example  .env.test  .gitignore  PHASE2_REPORT.md  README.md  alembic.ini  check_db.py  conftest.py  line_ai.db  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  task.md  test.db  測試文件.md  說明文件.md  說明文件.txt
.github/workflows/: ci.yml  test.yml
config/: ai.json  app.json  cag_config.json  line.json  logging_config.json  plugin_versions.json  plugins_config.json  prompts.yaml
config/development/: ai.json.json  app.json.json  app2.json.json  config.yaml  db.json.json  test_config.json.json
config/test/: config.yaml
data/: app.db
deploy/: Dockerfile  docker-compose.yml
docs/: api.md  deployment.md  development.md  phase2_completion_report.md  test_report.md  version_commit.md  version_control.md
docs/tasks/: phase_three_plan.md  test_implementation_plan.md
frontend/: package.json
frontend/src/api/: config.ts
migrations/: env.py
migrations/versions/: 001_initial.py
plugins/: image_analyzer.py  web_search.py  youtube_caption.py
scripts/: pre-ui-check.sh  run_admin.py  start_dev.py
src/: __init__.py  main.py
src/admin/: app.py
src/admin/pages/: logs.py  monitor.py  plugins.py  settings.py  users.py
src/line/: client.py  handler.py  router.py
src/line/routers/: users.py
src/shared/: __init__.py  database.py  exceptions.py
src/shared/ai/: base.py  factory.py  google.py  openai.py
src/shared/auth/: permissions.py  security.py
src/shared/cache/: base.py  decorators.py  manager.py  memory.py  redis.py
src/shared/cag/: __init__.py  context.py  coordinator.py  exceptions.py  generator.py  memory.py  state.py
tests/: .env.test  __init__.py  conftest.py  test_ai_models.py  test_automation.py  test_benchmark.py  test_config.py  test_config_base.py  test_config_manager.py  test_database.py  test_deployment.py  test_edge_cases.py  test_events.py  test_gemini.py  test_integration.py  test_integration_flow.py  test_line.py  test_line_sdk.py  test_load.py  test_load_performance.py  test_logger.py  test_monitoring.py  test_performance.py  test_prompts.py  test_rag.py  test_security.py  test_stability.py
tests/integration/: conftest.py  test_api_users.py  test_cag_integration.py  test_cag_system.py  test_webhook.py  test_webhook_advanced.py
tests/mocks/: model_manager.py
tests/unit/: test_ai_models.py  test_chat.py  test_chat_session.py  test_database.py  test_logger.py  test_main.py  test_webhook.py
(+155 files in other folders)
